# botish-api

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: changelog.yml  ci.yml  codeql.yml  publish.yml  stale.yml  standard-labels.yml
guide/: README.md  _sidebar.md  contributing.md  features.md  index.html  making_requests.md  quickstart.md  usage.md
guide/contributing/: README.md  how-to-contribute.md  project-structure.md  quickstart.md
guide/usage/: features.md
routes/: coinflip.py  diceroll.py  jokes.py
src/: dependencies.py  main.py
src/data/: jokes.json  quotes.json
src/routes/: coinflip.py  diceroll.py  jokes.py  quotes.py
tests/: conftest.py
tests/functional/: test_app.py  test_coinflip.py  test_diceroll.py  test_jokes.py  test_quotes.py
website/static/: styles.css
website/static/css/: styles.css
website/templates/: documentation.html  index.html  legals.html
