[tool.poetry]
name = "botish-api"
version = "0.6.0"
description = "An API for Bots"
authors = ["Vyvy-vi <vyom.j@protonmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/Vyvy-vi/botish-api"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.2"
uvicorn = "^0.16.0"
pydantic = "^1.8.2"
ujson = "^5.1.0"
aiofiles = "^0.8.0"
Jinja2 = "^3.0.2"
itsdangerous = "^2.0.1"
python-dotenv = "^0.19.1"
requests = "^2.26.0"
toml = "^0.10.2"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.9b0"
isort = "^5.9.3"
pytest = "^6.2.5"
pre-commit = "^2.16.0"
taskipy = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "flake8 ."
post_lint = "task format"
format = "task isort && task black"
isort = "isort ."
black = "black ."
start = "uvicorn src.main:app"
precommit = "pre-commit install --hook-type pre-commit --hook-type pre-push"
test = "pytest --cov=src tests/"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
